fix: add Redis password to 15 services' application-docker.yml
Root cause of 500 errors on master data endpoints: Redis requires
authentication (--requirepass) but 15 services were connecting
without a password, causing NOAUTH errors that cascaded into 500s
on all API endpoints.

Added password: ${REDIS_PASSWORD:} to spring.data.redis config in:
admin, attachment, audit, auth, comment, component, dashboard,
document, notification, portal, report, search, user, version,
workflow services.

Gateway, issue, plan, sprint, test services already had password.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>